--- a/.gitignore
+++ b/.gitignore
@@ -1,80 +1,105 @@
 .env
-.env.local  
-.gitignore
+.env.local
 
-# ======================
-# Rust / Cargo
-# ======================
-# Diretórios de build e cache
-/target/
-/debug/
-/release/
-
-# Arquivos de metadados e lock
-Cargo.lock
-
-# Diretórios temporários
-**/*.rs.bk
-*.log
-
-# ======================
-# IDEs e editores
-# ======================
-# VSCode
-.vscode/
-*.code-workspace
-
-# JetBrains (CLion, IntelliJ)
-.idea/
-
-# Arquivos de backup de editor
-*~
-*.swp
-*.swo
-
-# ======================
+# ----------------------
 # Sistema operacional
-# ======================
+# ----------------------
 # macOS
 .DS_Store
-
-# Linux
-*.out
-*.o
-*.so
 
 # Windows
 Thumbs.db
 ehthumbs.db
 Desktop.ini
 
-# ======================
-# Node.js (para integração front-end)
-# ======================
-Client-js/node_modules/
-src/program/target/
+# Arquivos temporários / de swap
+*~
+*.swp
+*.swo
+
+# ----------------------
+# Editores / IDEs
+# ----------------------
+# VS Code
+.vscode/
+*.code-workspace
+
+# JetBrains (IntelliJ, CLion, etc.)
+.idea/
+
+# ----------------------
+# Rust / Cargo
+# ----------------------
+# Diretórios de build/cache (remova se quiser versionar builds locais)
+/target/
+
+# Cargo.lock: para crates de biblioteca normalmente NÃO comitar; para aplicativos, comitar pode ser desejável.
+Cargo.lock
+
+# Backups específicos de Rust
+**/*.rs.bk
+
+# ----------------------
+# Node / front-end
+# ----------------------
+# Dependências
+node_modules/
+**/node_modules/
+
+# Build outputs
 dist/
-/node_modules/
-/dist/
-/build/
+build/
 /.parcel-cache/
-/.next/
-/yarn-error.log
+.next/
+
+# Logs do gerenciador de pacotes
+yarn-error.log
 npm-debug.log
 yarn-debug.log
+
+# Lockfiles (opte por comitar se for o policy do projeto)
 package-lock.json
 
-# ======================
-# Git
-# ======================
-# Arquivos grandes de build/teste
+# Entradas específicas do projeto
+Client-js/node_modules/
+src/program/target/
+
+# ----------------------
+# Binários, objetos e bibliotecas
+# ----------------------
+*.o
+*.so
+*.out
+*.exe
+*.dll
+*.dylib
+
+# ----------------------
+# Logs, temporários e caches
+# ----------------------
+*.log
+*.tmp
+
+# ----------------------
+# Arquivos compactados e backups
+# ----------------------
 *.tar
 *.zip
 *.gz
 *.7z
 *.bak
 
-# Evita subir arquivos maiores que 100MB
-# (checagem local recomendada antes do commit)
-# find . -type f -size +100M
+# Arquivos grandes (marca genérica; ajuste conforme necessário)
 *.largefile
+
+# ----------------------
+# Dados locais / dumps
+# ----------------------
+# Arquivos de exportação do Firebase e outros dumps locais — ajustar se quiser versionar
+/data/firebase*.json
+/data/*.json
+
+# ----------------------
+# Observações
+# - Este arquivo foi reorganizado para ser mais legível e livre de entradas duplicadas.
+# - Se houver arquivos que você deseja versionar (por exemplo, `package-lock.json`), edite este arquivo conforme a política do repositório.
